force-app/main/default/objects/Execution_Context__mdt/Execution_Context__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata to define the behavior of a user&apos;s execution context. Initially designed to tell which countries are connected to SAP but open for extension in the near future</description>
    <label>Execution Context</label>
    <pluralLabel>Execution Contexts</pluralLabel>
</CustomObject>