force-app/main/default/objects/Execution_Context__mdt/fields/ExtendedOpps__c.field-meta.xml
<CustomField>
    <fullName>ExtendedOpps__c</fullName>
    <description>Extended opportunities types allowed for the context</description>
    <inlineHelpText>semi-colon separated list of these keys: CUSTOMP, KITCHEN, FACADE.</inlineHelpText>
    <label>Extended Opportunities</label>
    <length>60</length>
    <type>Text</type>
</CustomField>