force-app/main/default/objects/Execution_Context__mdt/fields/Has_SAP__c.field-meta.xml
<CustomField>
    <fullName>Has_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this option when the user works in a context connected to SAP</description>
    <inlineHelpText>Check this option if you need to connect to SAP from Salesforce</inlineHelpText>
    <label>Has SAP</label>
    <type>Checkbox</type>
</CustomField>