force-app/main/default/objects/Execution_Context__mdt/fields/IFlow_allow_create__c.field-meta.xml
<CustomField>
    <fullName>IFlow_allow_create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the creation of accounts and contacts in login flow</description>
    <inlineHelpText>Allows the creation of accounts and contacts in login flow</inlineHelpText>
    <label>Login flow allow create</label>
    <type>Checkbox</type>
</CustomField>