force-app/main/default/objects/Execution_Context__mdt/fields/lFLow_enabled__c.field-meta.xml
<CustomField>
    <fullName>lFLow_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables or disables login flow for the current execution context</description>
    <inlineHelpText>Enables or disables login flow for the current execution context</inlineHelpText>
    <label>Login flow enabled</label>
    <type>Checkbox</type>
</CustomField>