force-app/main/default/objects/Execution_Context__mdt/fields/lFlow_maxDaysInQueue__c.field-meta.xml
<CustomField>
    <fullName>lFlow_maxDaysInQueue__c</fullName>
    <description>Maximum number of days in which an event can appear in the list of events with missing fields in the login flow</description>
    <inlineHelpText>Maximum number of days in which an event can appear in the list of events with missing fields in the login flow</inlineHelpText>
    <label>Login flow max days in queue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>