force-app/main/default/objects/Execution_Context__mdt/fields/lFlow_maxQueueSize__c.field-meta.xml
<CustomField>
    <fullName>lFlow_maxQueueSize__c</fullName>
    <description>Maximum number of events in the queue with missing fields in the login flow</description>
    <inlineHelpText>Maximum number of events in the queue with missing fields in the login flow</inlineHelpText>
    <label>Login flow max queue size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>