force-app/main/default/objects/Execution_Context__mdt/fields/lFlow_startDate__c.field-meta.xml
<CustomField>
    <fullName>lFlow_startDate__c</fullName>
    <description>Base date from which events with missing fields are displayed in login flow</description>
    <inlineHelpText>Base date from which events with missing fields are displayed in login flow</inlineHelpText>
    <label>Login flow start date</label>
    <type>Date</type>
</CustomField>