force-app/main/default/objects/Execution_Context__mdt/fields/NBK_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>NBK_Sales_Office__c</fullName>
    <label>Samples Sales Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>