force-app/main/default/objects/Execution_Context__mdt/fields/NBK_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>NBK_Sales_Organization__c</fullName>
    <label>Samples Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>