force-app/main/default/objects/Execution_Context__mdt/fields/OwnerAssignation__c.field-meta.xml
<CustomField>
    <fullName>OwnerAssignation__c</fullName>
    <description>Método sobre el que se buscará el owner para la asignación de un objeto</description>
    <label>Owner Assignation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STD</fullName>
                <default>true</default>
                <label>Standard (país y cp)</label>
            </value>
            <value>
                <fullName>USA</fullName>
                <label>Extended US (país, cp, profile, etc)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>