force-app/main/default/objects/Execution_Context__mdt/fields/PriceRequest__c.field-meta.xml
<CustomField>
    <fullName>PriceRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Request</label>
    <type>Checkbox</type>
</CustomField>