force-app/main/default/objects/Execution_Context__mdt/validationRules/ISO_Code_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>ISO_Code_Name</fullName>
    <active>false</active>
    <description>El Execution Context Name ha de ser un ISO CODE</description>
    <errorConditionFormula>AND(UPPER(DeveloperName) &lt;&gt; &apos;DEFAULT&apos;, LEN(DeveloperName) &lt;&gt; 2)</errorConditionFormula>
    <errorDisplayField>DeveloperName</errorDisplayField>
    <errorMessage>The name has to be an ISO CODE (2 characters) or DEFAULT, if still not set</errorMessage>
</ValidationRule>